// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cross-references - internal 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "Document Title",
          "type": "PlainText",
        },
      ],
      "level": 1,
      "type": "Header",
    },
    {
      "anchor": {
        "id": "section-1",
        "type": "BlockAnchor",
      },
      "content": [
        {
          "content": "Section 1",
          "type": "PlainText",
        },
      ],
      "level": 2,
      "type": "Header",
    },
    {
      "content": [
        {
          "content": "This is a reference to ",
          "type": "PlainText",
        },
        {
          "id": "section-2",
          "text": null,
          "type": "CrossReference",
        },
        {
          "content": ".",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
    {
      "anchor": {
        "id": "section-2",
        "type": "BlockAnchor",
      },
      "content": [
        {
          "content": "Section 2",
          "type": "PlainText",
        },
      ],
      "level": 2,
      "type": "Header",
    },
    {
      "content": [
        {
          "content": "This section refers back to ",
          "type": "PlainText",
        },
        {
          "id": "section-1",
          "text": ",the first section",
          "type": "CrossReference",
        },
        {
          "content": ".",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
    {
      "content": [
        {
          "content": "Here's a reference to ",
          "type": "PlainText",
        },
        {
          "id": "_subsection_2_1",
          "text": null,
          "type": "CrossReference",
        },
        {
          "content": ".",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
    {
      "content": [
        {
          "content": "Subsection 2.1",
          "type": "PlainText",
        },
      ],
      "level": 3,
      "type": "Header",
    },
    {
      "content": [
        {
          "content": "This is a subsection.",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;

exports[`Cross-references - to non-section elements 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "reference to ",
          "type": "PlainText",
        },
        {
          "id": "table-1",
          "text": null,
          "type": "CrossReference",
        },
        {
          "content": ".",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
    {
      "anchor": {
        "id": "table-1",
        "type": "BlockAnchor",
      },
      "content": [
        {
          "content": ".Table 1: Sample data",
          "type": "PlainText",
        },
        {
          "content": "|===",
          "type": "PlainText",
        },
        {
          "content": "| Header 1 |",
          "type": "PlainText",
        },
        {
          "content": "| Data 1   |",
          "type": "PlainText",
        },
        {
          "content": "|===",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;

exports[`Cross-references - with custom text 1`] = `
{
  "blocks": [
    {
      "content": [
        {
          "content": "Document Title",
          "type": "PlainText",
        },
      ],
      "level": 1,
      "type": "Header",
    },
    {
      "anchor": {
        "id": "introduction",
        "type": "BlockAnchor",
      },
      "content": [
        {
          "content": "Introduction",
          "type": "PlainText",
        },
      ],
      "level": 2,
      "type": "Header",
    },
    {
      "content": [
        {
          "content": "For more details, see ",
          "type": "PlainText",
        },
        {
          "id": "conclusion",
          "text": ",the conclusion of this document",
          "type": "CrossReference",
        },
        {
          "content": ".",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
    {
      "anchor": {
        "id": "conclusion",
        "type": "BlockAnchor",
      },
      "content": [
        {
          "content": "Conclusion",
          "type": "PlainText",
        },
      ],
      "level": 2,
      "type": "Header",
    },
    {
      "content": [
        {
          "content": "As mentioned in ",
          "type": "PlainText",
        },
        {
          "id": "introduction",
          "text": ",the introduction",
          "type": "CrossReference",
        },
        {
          "content": ", this is the end of the document.",
          "type": "PlainText",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;
